# frag

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  FUTURE_SCOPE.md  GRAMMAR.md  LANGUAGE.md  RELEASE_PROCESS.md
examples/: alu_1bit.frag  and_gate.frag  comparator_1bit.frag  const_mask.frag  control_datapath.frag  counter.frag  decoder2to4.frag  example.frag  full_adder.frag  half_adder.frag  incrementer4.frag  majority.frag  mux2.frag  mux4_case.frag  mux4_if.frag  nibble_splitter.frag  register.frag  xor_gate.frag
src/: ast.rs  codegen.rs  diagnostic.rs  graph.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs  simulator.rs  verilog.rs
tests/: golden.rs  pipeline.rs  properties.rs  toolchain.rs
tests/golden/: half_adder.ir  half_adder.v  mux4_case.ir  mux4_case.mmd  mux4_case.v  mux4_if.ir  mux4_if.mmd  nibble_splitter.ir  nibble_splitter.mmd  nibble_splitter.v
